--- a/Blog.Web/Views/_ViewImports.cshtml
+++ b/Blog.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using Blog.Web
+﻿@using Blog.Entity.Entities
+@using Blog.Web
 @using Blog.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
