--- a/Blog.Web/Views/_ViewImports.cshtml
+++ b/Blog.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Blog.Entity.Entities
+@using Blog.Entity.DTOs.Articles
 @using Blog.Web
 @using Blog.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
