--- a/Blog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,32 +1,16 @@
-﻿@RenderBody()
-
-<!DOCTYPE html>
-<html lang="en" class="light-style layout-menu-fixed layout-compact " dir="ltr" data-theme="theme-default" data-assets-path="~/sneat/assets/" data-template="vertical-menu-template-free">
+﻿<html lang="en" class="light-style layout-menu-fixed " dir="ltr" data-theme="theme-default" data-template="vertical-menu-template-free">
 
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-	<title>Demo : Dashboard - Analytics | Sneat - Bootstrap Dashboard PRO</title>
+	<title>Dashboard - Analytics | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
 
-
-	<meta name="description" content="Most Powerful &amp; Comprehensive Bootstrap 5 Admin Dashboard built for developers!" />
+	<meta name="description" content="Most Powerful &amp; Comprehensive Bootstrap 5 HTML Admin Dashboard Template built for developers!" />
 	<meta name="keywords" content="dashboard, bootstrap 5 dashboard, bootstrap 5 design, bootstrap 5">
 	<!-- Canonical SEO -->
-	<link rel="canonical" href="https://themeselection.com/item/sneat-dashboard-pro-bootstrap/">
+	<link rel="canonical" href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/">
 
-
-	<!-- ? PROD Only: Google Tag Manager (Default ThemeSelection: GTM-5DDHKGP, PixInvent: GTM-5J3LMKC) -->
-	<script>
-		(function (w, d, s, l, i) {
-			w[l] = w[l] || []; w[l].push({
-				'gtm.start':
-					new Date().getTime(), event: 'gtm.js'
-			}); var f = d.getElementsByTagName(s)[0],
-				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-		})(window, document, 'script', 'dataLayer', 'GTM-5DDHKGP');</script>
-	<!-- End Google Tag Manager -->
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="~/sneat/assets/img/favicon/favicon.ico" />
 
@@ -35,8 +19,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
+	<link href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
 
+	<!-- Icons. Uncomment required icon fonts -->
 	<link rel="stylesheet" href="~/sneat/assets/vendor/fonts/boxicons.css" />
+
 
 
 	<!-- Core CSS -->
@@ -46,23 +33,35 @@
 
 	<!-- Vendors CSS -->
 	<link rel="stylesheet" href="~/sneat/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+
 	<link rel="stylesheet" href="~/sneat/assets/vendor/libs/apex-charts/apex-charts.css" />
 
 	<!-- Page CSS -->
 	<!-- Helpers -->
 	<script src="~/sneat/assets/vendor/js/helpers.js"></script>
+
 	<!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
 	<!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
 	<script src="~/sneat/assets/js/config.js"></script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async="async" src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+		gtag('config', 'GA_MEASUREMENT_ID');
+	</script>
+	<!-- Custom notification for demo -->
+	<!-- beautify ignore:end -->
 
 </head>
 
 <body>
 
-
-	<!-- ?PROD Only: Google Tag Manager (noscript) (Default ThemeSelection: GTM-5DDHKGP, PixInvent: GTM-5J3LMKC) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DDHKGP" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
 	<!-- Layout wrapper -->
 	<div class="layout-wrapper layout-content-navbar  ">
 		<div class="layout-container">
@@ -116,7 +115,7 @@
 							</svg>
 
 						</span>
-						<span class="app-brand-text demo menu-text fw-bold ms-2">Sneat</span>
+						<span class="app-brand-text demo menu-text fw-bolder ms-2">Sneat</span>
 					</a>
 
 					<a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto d-block d-xl-none">
@@ -125,6 +124,7 @@
 				</div>
 
 				<div class="menu-inner-shadow"></div>
+
 
 
 
@@ -396,14 +396,16 @@
 	<!-- endbuild -->
 	<!-- Vendors JS -->
 	<script src="~/sneat/assets/vendor/libs/apex-charts/apexcharts.js"></script>
-
+	<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.datatables.net/buttons/1.6.3/js/dataTables.buttons.min.js" crossorigin="anonymous"></script>
 	<!-- Main JS -->
 	<script src="~/sneat/assets/js/main.js"></script>
 
 
 	<!-- Page JS -->
 	<script src="~/sneat/assets/js/dashboards-analytics.js"></script>
-
+	@await RenderSectionAsync("Scripts",false);
 	<!-- Place this tag in your head or just before your close body tag. -->
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 
