--- a/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -32,12 +32,18 @@
                             <th>@article.CreatedBy</th>
                             <th>@(article.IsDeleted ? "Is not active" : "Is Active")</th>
                             <th>
-                                <a  class="btn btn-primary btn-sm" 
+                                <a class="btn btn-primary btn-sm"
                                    data-id="@article.Id"
-                                   asp-area="Admin" 
-                                   asp-controller="Article" 
-                                   asp-action="Update" 
+                                   asp-area="Admin"
+                                   asp-controller="Article"
+                                   asp-action="Update"
                                    asp-route-articleId="@article.Id"><i class="bx bxs-edit"></i></a>
+                                <a class="btn btn-danger btn-sm"
+                                   data-id="@article.Id"
+                                   asp-area="Admin"
+                                   asp-controller="Article"
+                                   asp-action="Delete"
+                                   asp-route-articleId="@article.Id"><i class="bx bx-minus-circle"></i></a>
                             </th>
 
                         </tr>
