--- a/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -16,16 +16,18 @@
 							<select id="categoryList" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
 							 <span asp-validation-for="CategoryId" class="text-danger"></span>
 						</div>
-						<div class="form-group">
-							<label asp-for="Title" for="defaultFormControlInput" class="form-label">Title</label>
-							<input asp-for=Title type="text" class="form-control mb-3" id="defaultFormControlInput" placeholder="Title" aria-describedby="defaultFormControlHelp">
+                        <div class="form-group">
+                            <label asp-for="Title" for="defaultFormControlInput" class="form-label">Title</label>
+                            <input asp-for=Title type="text" class="form-control mb-3" id="defaultFormControlInput" placeholder="Title" aria-describedby="defaultFormControlHelp">
+                            <span asp-validation-for="Title" class="text-danger"></span>
 
-						</div>
-						<div class="form-group">
-							<label asp-for="Content" for="defaultFormControlInput" class="form-label">Content</label>
-							<textarea asp-for="Content" type="text" class="form-control mb-3" id="defaultFormControlInput" style="min-height:200px" placeholder="Content" aria-describedby="defaultFormControlHelp"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Content" for="defaultFormControlInput" class="form-label">Content</label>
+                            <textarea asp-for="Content" type="text" class="form-control mb-3" id="defaultFormControlInput" style="min-height:200px" placeholder="Content" aria-describedby="defaultFormControlHelp"></textarea>
+                            <span asp-validation-for="Content" class="text-danger"></span>
 
-						</div>
+                        </div>
 						
 						<div class="form-group ">
                             <button type="submit" class="btn btn-primary btn-block ">Save</button>
