--- a/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Add.cshtml
@@ -10,12 +10,12 @@
 		<div class="col-md-12">
 			<div class="card mb-4">
 				<form asp-controller="Article" asp-action="Add" method="post" enctype="multipart/form-data">
-					<div class="card-body">
-						<div class="form-group">
-							<label asp-for="CategoryId">Category</label>
-							<select id="categoryList" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
-							 <span asp-validation-for="CategoryId" class="text-danger"></span>
-						</div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label asp-for="CategoryId">Category</label>
+                            <select id="categoryList" class="form-control" asp-for="CategoryId" asp-items="@(new SelectList(Model.Categories,"Id","Name"))"></select>
+                            <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
                         <div class="form-group">
                             <label asp-for="Title" for="defaultFormControlInput" class="form-label">Title</label>
                             <input asp-for=Title type="text" class="form-control mb-3" id="defaultFormControlInput" placeholder="Title" aria-describedby="defaultFormControlHelp">
@@ -28,11 +28,17 @@
                             <span asp-validation-for="Content" class="text-danger"></span>
 
                         </div>
-						
-						<div class="form-group ">
+                        <div class="form-group">
+                            <label asp-for="Photo" for="defaultFormControlInput" class="form-label">Add Image</label>
+                            <input asp-for=Photo type="file" accept="image/*" class="form-control mb-3" id="defaultFormControlInput"  aria-describedby="defaultFormControlHelp">
+                            <span asp-validation-for="Photo" class="text-danger"></span>
+
+                        </div>
+
+                        <div class="form-group ">
                             <button type="submit" class="btn btn-primary btn-block ">Save</button>
-						</div>
-					</div>
+                        </div>
+                    </div>
 				</form>
 			</div>
 		</div>
