--- a/Blog.Web/Areas/Admin/Views/Article/Update.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Update.cshtml
@@ -42,6 +42,19 @@
                             <span asp-validation-for="Content" class="text-danger"></span>
 
                         </div>
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label asp-for="Image.FileName" for="defaultFormControlInput" class="form-label d-block">Update Image</label>
+                                <img src="~/images/@Model.Image.FileName" style="height:20em;width:20em;margin-bottom:3em" alt="@Model.Title" />
+
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label asp-for="Photo" for="defaultFormControlInput" class="form-label">Add Image</label>
+                                <input asp-for=Photo type="file" accept="image/*" class="form-control mb-3" id="defaultFormControlInput" aria-describedby="defaultFormControlHelp">
+                                <span asp-validation-for="Photo" class="text-danger"></span>
+
+                            </div>
+                        </div>
 
                         <div class="form-group ">
                             <button type="submit" class="btn btn-primary btn-block ">Save</button>
