Adding category operations

--- a/Blog.Web/Areas/Admin/Views/Article/Update.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Update.cshtml
@@ -9,7 +9,7 @@
 
 
     <h4 class="py-3 mb-4">
-        <span class="text-muted fw-light">Article Management /</span> Add Articles
+        <span class="text-muted fw-light">Article Management /</span> Update Articles
     </h4>
 
     <div class="row">
