--- a/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -10,7 +10,9 @@
     <div class="card">
         
         <div class="table-responsive text-nowrap m-5">
+            @{@if (!User.IsInRole("User")) { 
             <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="Article" asp-action="Add">Add Article <i class="bx bx-plus"></i></a>
+            }}
             <table class="table table-bordered" id="articlesTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
@@ -19,7 +21,10 @@
                         <th>Created Date</th>
                         <th>Author</th>
                         <th>Status</th>
-                        <th>Operations</th>
+                        @if (!User.IsInRole("User"))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
@@ -31,20 +36,23 @@
                             <th>@article.CreatedDate.ToShortDateString()</th>
                             <th>@article.CreatedBy</th>
                             <th>@(article.IsDeleted ? "Is not active" : "Is Active")</th>
-                            <th>
-                                <a class="btn btn-primary btn-sm"
-                                   data-id="@article.Id"
-                                   asp-area="Admin"
-                                   asp-controller="Article"
-                                   asp-action="Update"
-                                   asp-route-articleId="@article.Id"><i class="bx bxs-edit"></i></a>
-                                <a class="btn btn-danger btn-sm"
-                                   data-id="@article.Id"
-                                   asp-area="Admin"
-                                   asp-controller="Article"
-                                   asp-action="Delete"
-                                   asp-route-articleId="@article.Id"><i class="bx bx-minus-circle"></i></a>
-                            </th>
+                            @if (!User.IsInRole("User"))
+                            {
+                                <th>
+                                    <a class="btn btn-primary btn-sm"
+                                       data-id="@article.Id"
+                                       asp-area="Admin"
+                                       asp-controller="Article"
+                                       asp-action="Update"
+                                       asp-route-articleId="@article.Id"><i class="bx bxs-edit"></i></a>
+                                    <a class="btn btn-danger btn-sm"
+                                       data-id="@article.Id"
+                                       asp-area="Admin"
+                                       asp-controller="Article"
+                                       asp-action="Delete"
+                                       asp-route-articleId="@article.Id"><i class="bx bx-minus-circle"></i></a>
+                                </th>
+                            }
 
                         </tr>
                     }
@@ -56,7 +64,10 @@
                         <th>Created Date</th>
                         <th>Author</th>
                         <th>Status</th>
-                        <th>Operations</th>
+                        @if (!User.IsInRole("User"))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </tfoot>
             </table>
