--- a/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="card">
         
         <div class="table-responsive text-nowrap m-5">
-            @{@if (!User.IsInRole("User")) { 
+            @{@if (!User.IsInRole($"{RoleConsts.User}")) { 
             <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="Article" asp-action="Add">Add Article <i class="bx bx-plus"></i></a>
             }}
             <table class="table table-bordered" id="articlesTable" width="100%" cellspacing="0">
@@ -21,7 +21,7 @@
                         <th>Created Date</th>
                         <th>Author</th>
                         <th>Status</th>
-                        @if (!User.IsInRole("User"))
+                        @if (!User.IsInRole($"{RoleConsts.User}"))
                         {
                             <th>Operations</th>
                         }
@@ -36,7 +36,7 @@
                             <th>@article.CreatedDate.ToShortDateString()</th>
                             <th>@article.CreatedBy</th>
                             <th>@(article.IsDeleted ? "Is not active" : "Is Active")</th>
-                            @if (!User.IsInRole("User"))
+                            @if (!User.IsInRole($"{RoleConsts.User}"))
                             {
                                 <th>
                                     <a class="btn btn-primary btn-sm"
