--- a/Blog.Web/Areas/Admin/Views/Category/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Category/Index.cshtml
@@ -10,7 +10,10 @@
     <div class="card">
 
         <div class="table-responsive text-nowrap m-5">
-            <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="Category" asp-action="Add">Add Category <i class="bx bx-plus"></i></a>
+            @if (!User.IsInRole(RoleConsts.User))
+            {
+                <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="Category" asp-action="Add">Add Category <i class="bx bx-plus"></i></a>
+            }
             <table class="table table-bordered" id="categoriesTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
@@ -18,7 +21,10 @@
                         <th>Created Date</th>
                         <th>Creator</th>
                         <th>Status</th>
-                        <th>Operations</th>
+                        @if (!User.IsInRole(RoleConsts.User))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
@@ -26,24 +32,27 @@
                     {
                         <tr name="@category.Id">
                             <th>@category.Name</th>
-                        
+
                             <th>@category.CreatedDate.ToShortDateString()</th>
                             <th>@category.CreatedBy</th>
                             <th>@(category.IsDeleted ? "Is not active" : "Is Active")</th>
-                            <th>
-                                <a class="btn btn-primary btn-sm"
-                                   data-id="@category.Id"
-                                   asp-area="Admin"
-                                   asp-controller="Category"
-                                   asp-action="Update"
-                                   asp-route-categoryId="@category.Id"><i class="bx bxs-edit"></i></a>
-                                <a class="btn btn-danger btn-sm"
-                                   data-id="@category.Id"
-                                   asp-area="Admin"
-                                   asp-controller="Category"
-                                   asp-action="Delete"
-                                   asp-route-categoryId="@category.Id"><i class="bx bx-minus-circle"></i></a>
-                            </th>
+                            @if (!User.IsInRole(RoleConsts.User))
+                            {
+                                <th>
+                                    <a class="btn btn-primary btn-sm"
+                                       data-id="@category.Id"
+                                       asp-area="Admin"
+                                       asp-controller="Category"
+                                       asp-action="Update"
+                                       asp-route-categoryId="@category.Id"><i class="bx bxs-edit"></i></a>
+                                    <a class="btn btn-danger btn-sm"
+                                       data-id="@category.Id"
+                                       asp-area="Admin"
+                                       asp-controller="Category"
+                                       asp-action="Delete"
+                                       asp-route-categoryId="@category.Id"><i class="bx bx-minus-circle"></i></a>
+                                </th>
+                            }
 
                         </tr>
                     }
@@ -51,11 +60,14 @@
                 <tfoot>
                     <tr>
                         <th>Name</th>
-                        
+
                         <th>Created Date</th>
                         <th>Creator</th>
                         <th>Status</th>
-                        <th>Operations</th>
+                        @if (!User.IsInRole(RoleConsts.User))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </tfoot>
             </table>
