--- a/Blog.Web/Areas/Admin/Views/User/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/User/Index.cshtml
@@ -10,7 +10,10 @@
     <div class="card">
 
         <div class="table-responsive text-nowrap m-5">
-            <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="User" asp-action="Add">Add User <i class="bx bx-plus"></i></a>
+            @if (User.IsInRole(RoleConsts.SuperAdmin))
+            {
+                <a class="btn btn-success mb-3" asp-area="Admin" asp-controller="User" asp-action="Add">Add User <i class="bx bx-plus"></i></a>
+            }
             <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
@@ -21,11 +24,14 @@
                         <th>Email verification</th>
                         <th>Role</th>
                         <th>Connection errors</th>
-                        <th>Operations</th>
+                        @if (User.IsInRole(RoleConsts.SuperAdmin))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </thead>
                 <tbody class="table-border-bottom-0">
-                    @foreach (var user in Model) 
+                    @foreach (var user in Model)
                     {
                         <tr name="@user.Id">
                             <th>@user.FirstName</th>
@@ -36,20 +42,23 @@
                             <th>@(user.EmailConfirmed ? "Is verified" : "Is not verified")</th>
                             <th>@user.Role</th>
                             <th>@user.AccessFailedCount</th>
-                            <th>
-                                <a class="btn btn-primary btn-sm"
-                                   data-id="@user.Id"
-                                   asp-area="Admin"
-                                   asp-controller="User"
-                                   asp-action="Update"
-                                   asp-route-userId="@user.Id"><i class="bx bxs-edit"></i></a>
-                                <a class="btn btn-danger btn-sm"
-                                   data-id="@user.Id"
-                                   asp-area="Admin"
-                                   asp-controller="User"
-                                   asp-action="Delete"
-                                   asp-route-userId="@user.Id"><i class="bx bx-minus-circle"></i></a>
-                            </th>
+                            @if (User.IsInRole(RoleConsts.SuperAdmin))
+                            {
+                                <th>
+                                    <a class="btn btn-primary btn-sm"
+                                       data-id="@user.Id"
+                                       asp-area="Admin"
+                                       asp-controller="User"
+                                       asp-action="Update"
+                                       asp-route-userId="@user.Id"><i class="bx bxs-edit"></i></a>
+                                    <a class="btn btn-danger btn-sm"
+                                       data-id="@user.Id"
+                                       asp-area="Admin"
+                                       asp-controller="User"
+                                       asp-action="Delete"
+                                       asp-route-userId="@user.Id"><i class="bx bx-minus-circle"></i></a>
+                                </th>
+                            }
 
                         </tr>
                     }
@@ -63,7 +72,10 @@
                         <th>Email verification</th>
                         <th>Role</th>
                         <th>Connection errors</th>
-                        <th>Operations</th>
+                        @if (User.IsInRole(RoleConsts.SuperAdmin))
+                        {
+                            <th>Operations</th>
+                        }
                     </tr>
                 </tfoot>
             </table>
