--- a/Blog.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Blog.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿﻿<div class="content-wrapper">
+﻿
+<div class="content-wrapper">
 
     <!-- Content -->
 
@@ -35,7 +36,7 @@
 
                                     <i style="height:30px; font-size:2.25rem" class="menu-icon bx bx-paper-plane"></i>
                                 </div>
-                                <span class="fw-semibold d-block mb-1">Toplam Yayınlanan <br /> Makale Sayısı</span>
+                                <span class="fw-semibold d-block mb-1">Total Number of <br /> Published Articles</span>
                                 <h3 class="card-title mb-2" id="totalArticleCount"></h3>
                                 <small class="text-success fw-semibold"></small>
                             </div>
@@ -48,7 +49,7 @@
                                     <i style="height:30px; font-size:2.25rem" class="menu-icon bx bx-category"></i>
 
                                 </div>
-                                <span class="fw-semibold d-block mb-1">Toplam Eklenen <br /> Kategori Sayısı</span>
+                                <span class="fw-semibold d-block mb-1">Total Number of  <br /> Added Categories</span>
                                 <h3 class="card-title text-nowrap mb-1" id="totalCategoryCount"></h3>
                                 <small class="text-success fw-semibold"></small>
                             </div>
@@ -61,7 +62,7 @@
                 <div class="card">
                     <div class="row row-bordered g-0">
                         <div class="col-md-12">
-                            <h5 class="card-header m-0 me-2 pb-3">@DateTime.Now.Year Yılının Makale Yayınlama Analizi</h5>
+                            <h5 class="card-header m-0 me-2 pb-3">@DateTime.Now.Year Article analysis</h5>
                             <div id="customTotalRevenueChart" class="px-2"></div>
                         </div>
                         @*<div class="col-md-4">
@@ -459,3 +460,15 @@
     <div class="content-backdrop fade"></div>
 </div>
 
+@section Scripts{
+    <script src="~/js/dashboardIndex.js"></script>
+    <script>
+        var app = app || {}
+        app.Urls = app.Urls || {}
+
+        app.Urls.yearlyArticlesUrl = "@(Url.Action("YearlyArticleCounts", "Home"))";
+        app.Urls.totalArticleCountUrl = "@(Url.Action("TotalArticleCount", "Home"))";
+        app.Urls.totalCategoryCountUrl = "@(Url.Action("TotalCategoryCount", "Home"))";
+
+    </script>
+}
