--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                                     </div>
                                     <div class="down-content">
                                         <span>@item.Category.Name</span>
-                                        <a href="post-details.html"><h4>@item.Title</h4></a>
+                                        <a asp-controller="Home" asp-action="Details" asp-route-id="@item.Id"><h4>@item.Title</h4></a>
                                         <ul class="post-info">
                                             <li>@item.User.FirstName @item.User.LastName</li>
                                             <li>@item.CreatedDate.ToString("dd/MM/yyyy")</li>
@@ -32,7 +32,7 @@
                                                 <div class="col-6">
                                                     <ul class="post-share">
                                                         <li><i class="fa fa-link"></i></li>
-                                                        <li><a href="#"> [Read More]</a></li>
+                                                        <li><a asp-controller="Home" asp-action="Details" asp-route-id="@item.Id"> [Read More]</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -113,16 +113,7 @@
                                 <div class="sidebar-heading">
                                     <h2>Categories</h2>
                                 </div>
-                                <div class="content">
-                                    <ul>
-                                        <li><a href="#">- Nature Lifestyle</a></li>
-                                        <li><a href="#">- Awesome Layouts</a></li>
-                                        <li><a href="#">- Creative Ideas</a></li>
-                                        <li><a href="#">- Responsive Templates</a></li>
-                                        <li><a href="#">- HTML5 / CSS3 Templates</a></li>
-                                        <li><a href="#">- Creative &amp; Unique</a></li>
-                                    </ul>
-                                </div>
+                               @await Component.InvokeAsync("HomeCategories")
                             </div>
                         </div>
                         
