--- a/Blog.Web/Views/_ViewImports.cshtml
+++ b/Blog.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Blog.Entity.DTOs.Articles
 @using Blog.Web
 @using Blog.Web.Models
+@using Blog.Entity.DTOs.Categories
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
