--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -7,10 +7,19 @@
                     <div class="row">
                         @foreach (var item in Model.Articles)
                         {
+
+
                             <div class="col-lg-12">
                                 <div class="blog-post">
                                     <div class="blog-thumb">
-                                        <img src="~/stand-blog/assets/images/blog-post-01.jpg" alt="">
+                                        @if (item.Image.FileName != null)
+                                        {
+                                            <img src="~/images/@item.Image.FileName" alt="">
+                                        }
+                                        else
+                                        {
+                                            <img src="~/stand-blog/assets/images/blog-post-01.jpg" alt="">
+                                        }
                                     </div>
                                     <div class="down-content">
                                         <span>@item.Category.Name</span>
@@ -26,7 +35,7 @@
                                                 <div class="col-6">
                                                     <ul class="post-tags">
                                                         <li><i class="fa fa-tags"></i></li>
-                                                        <li>@item.Category.Name</li>                                                   
+                                                        <li>@item.Category.Name</li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-6">
@@ -43,8 +52,8 @@
                         }
                         <div class="col-lg-12">
                             @*<div class="main-button">
-                                <a href="blog.html">View All Posts</a>
-                            </div>*@
+                                    <a href="blog.html">View All Posts</a>
+                                </div>*@
                             <ul class="pagination justify-content-center mt-4 mb-4 btn-block">
                                 @if (Model.ShowPrevious)
                                 {
@@ -52,12 +61,12 @@
                                         <a class="page-link" asp-route-currentPage="@(Model.CurrentPage-1)" asp-route-pageSize="@Model.PageSize">Previous</a>
                                     </li>
                                 }
-                                @for(int i=1; i <= Model.TotalPages; i++)
-            {
+                                @for (int i = 1; i <= Model.TotalPages; i++)
+                                {
                                     <li class="page-item @(i==Model.CurrentPage ? "active" :"")">
                                         <a class="page-link" asp-route-currentPage="@i" asp-route-pageSize="@Model.PageSize">@i</a>
                                     </li>
-            }
+                                }
                                 @if (Model.ShowNext)
                                 {
                                     <li class="page-item">
@@ -74,7 +83,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="sidebar-item search">
-                                <form id="search_form" asp-controller="Home" asp-action="Search" method="GET" >
+                                <form id="search_form" asp-controller="Home" asp-action="Search" method="GET">
                                     <input type="text" name="keyword" class="searchText" placeholder="type to search..." autocomplete="on">
                                 </form>
                             </div>
@@ -113,10 +122,10 @@
                                 <div class="sidebar-heading">
                                     <h2>Categories</h2>
                                 </div>
-                               @await Component.InvokeAsync("HomeCategories")
+                                @await Component.InvokeAsync("HomeCategories")
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
